--- a/openApiDocs/beta/Planner.yml
+++ b/openApiDocs/beta/Planner.yml
@@ -2055,6 +2055,39 @@ paths:
         default:
           $ref: '#/components/responses/error'
       x-ms-docs-operation-type: action
+  '/groups/{group-id}/planner/plans/{plannerPlan-id}/microsoft.graph.getUsageRights()':
+    get:
+      tags:
+        - groups.plannerGroup
+      summary: Invoke function getUsageRights
+      operationId: group.planner.plan_getUsageRight
+      parameters:
+        - name: group-id
+          in: path
+          description: The unique identifier of group
+          required: true
+          style: simple
+          schema:
+            type: string
+          x-ms-docs-key-type: group
+        - name: plannerPlan-id
+          in: path
+          description: The unique identifier of plannerPlan
+          required: true
+          style: simple
+          schema:
+            type: string
+          x-ms-docs-key-type: plannerPlan
+      responses:
+        2XX:
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/microsoft.graph.planUsageRight'
+        default:
+          $ref: '#/components/responses/error'
+      x-ms-docs-operation-type: function
   '/groups/{group-id}/planner/plans/{plannerPlan-id}/microsoft.graph.moveToContainer':
     post:
       tags:
@@ -6153,6 +6186,31 @@ paths:
         default:
           $ref: '#/components/responses/error'
       x-ms-docs-operation-type: action
+  '/planner/plans/{plannerPlan-id}/microsoft.graph.getUsageRights()':
+    get:
+      tags:
+        - planner.plannerPlan
+      summary: Invoke function getUsageRights
+      operationId: planner.plan_getUsageRight
+      parameters:
+        - name: plannerPlan-id
+          in: path
+          description: The unique identifier of plannerPlan
+          required: true
+          style: simple
+          schema:
+            type: string
+          x-ms-docs-key-type: plannerPlan
+      responses:
+        2XX:
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/microsoft.graph.planUsageRight'
+        default:
+          $ref: '#/components/responses/error'
+      x-ms-docs-operation-type: function
   '/planner/plans/{plannerPlan-id}/microsoft.graph.moveToContainer':
     post:
       tags:
@@ -11210,6 +11268,39 @@ paths:
         default:
           $ref: '#/components/responses/error'
       x-ms-docs-operation-type: action
+  '/users/{user-id}/planner/plans/{plannerPlan-id}/microsoft.graph.getUsageRights()':
+    get:
+      tags:
+        - users.plannerUser
+      summary: Invoke function getUsageRights
+      operationId: user.planner.plan_getUsageRight
+      parameters:
+        - name: user-id
+          in: path
+          description: The unique identifier of user
+          required: true
+          style: simple
+          schema:
+            type: string
+          x-ms-docs-key-type: user
+        - name: plannerPlan-id
+          in: path
+          description: The unique identifier of plannerPlan
+          required: true
+          style: simple
+          schema:
+            type: string
+          x-ms-docs-key-type: plannerPlan
+      responses:
+        2XX:
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/microsoft.graph.planUsageRight'
+        default:
+          $ref: '#/components/responses/error'
+      x-ms-docs-operation-type: function
   '/users/{user-id}/planner/plans/{plannerPlan-id}/microsoft.graph.moveToContainer':
     post:
       tags:
@@ -13575,6 +13666,8 @@ components:
               $ref: '#/components/schemas/microsoft.graph.plannerArchivalInfo'
             container:
               $ref: '#/components/schemas/microsoft.graph.plannerPlanContainer'
+            contentSensitivityLabelAssignment:
+              $ref: '#/components/schemas/microsoft.graph.contentSensitivityLabelAssignment'
             contexts:
               $ref: '#/components/schemas/microsoft.graph.plannerPlanContextCollection'
             createdBy:
@@ -13714,6 +13807,8 @@ components:
               description: 'The date and time at which the task is due. The timestamp type represents date and time information using ISO 8601 format and is always in UTC time. For example, midnight UTC on Jan 1, 2014 is 2014-01-01T00:00:00Z'
               format: date-time
               nullable: true
+            hasChat:
+              type: boolean
             hasDescription:
               type: boolean
               description: 'Read-only. This value is true if the details object of the task has a nonempty description. Otherwise,false.'
@@ -13871,6 +13966,20 @@ components:
               $ref: '#/components/schemas/microsoft.graph.plannerUserIds'
           additionalProperties:
             type: object
+    microsoft.graph.planUsageRight:
+      title: planUsageRight
+      type: object
+      properties:
+        hasSensitivityLabel:
+          type: boolean
+          description: 'Indicates whether the plan has a sensitivity label applied. If true, the plan has a sensitivity label assignment; if false, no sensitivity label is applied.'
+        planId:
+          type: string
+          description: The unique identifier of the plan for which usage rights are under evaluation.
+        usageRights:
+          $ref: '#/components/schemas/microsoft.graph.usageRightsInfo'
+      additionalProperties:
+        type: object
     microsoft.graph.plannerPlanContainer:
       title: plannerPlanContainer
       type: object
@@ -14054,6 +14163,26 @@ components:
           type: string
           description: Read-only. Date and time at which the entity's archive status changed.
           format: date-time
+          nullable: true
+      additionalProperties:
+        type: object
+    microsoft.graph.contentSensitivityLabelAssignment:
+      title: contentSensitivityLabelAssignment
+      type: object
+      properties:
+        assignmentMethod:
+          $ref: '#/components/schemas/microsoft.graph.sensitivityLabelAssignmentMethod'
+        justificationText:
+          type: string
+          description: The justification text provided when you change the sensitivity label. Used during label downgrade to document the reason. Optional.
+          nullable: true
+        sensitivityLabelId:
+          type: string
+          description: The unique identifier of the sensitivity label applied to the content. This ID corresponds to a label defined in the Microsoft Information Protection policy.
+          nullable: true
+        tenantId:
+          type: string
+          description: The unique identifier of the tenant where the sensitivity label is defined and applied.
           nullable: true
       additionalProperties:
         type: object
@@ -14341,6 +14470,27 @@ components:
       type: object
       additionalProperties:
         type: object
+    microsoft.graph.usageRightsInfo:
+      title: usageRightsInfo
+      type: object
+      properties:
+        allowCopy:
+          type: boolean
+          description: 'Indicates whether the user has permission to copy content from the protected resource. When true, copying is allowed; when false, copying is restricted by the sensitivity label policy.'
+        allowEdit:
+          type: boolean
+          description: 'Indicates whether the user has permission to edit or modify the protected content. When true, editing is allowed; when false, the content is read-only for this user.'
+        allowExport:
+          type: boolean
+          description: 'Indicates whether the user has permission to export or save the protected content to external locations. When true, exporting is allowed; when false, export operations are restricted.'
+        allowPrint:
+          type: boolean
+          description: 'Indicates whether the user has permission to print the protected content. When true, printing is allowed; when false, print functionality is disabled.'
+        allowView:
+          type: boolean
+          description: 'Indicates whether the user has permission to view or access the protected content. When true, the user can view the content; when false, access is denied.'
+      additionalProperties:
+        type: object
     microsoft.graph.plannerContainerType:
       title: plannerContainerType
       enum:
@@ -14474,11 +14624,11 @@ components:
       properties:
         displayName:
           type: string
-          description: The display name of the identity. This property is read-only.
+          description: 'The display name of the identity. For drive items, the display name might not always be available or up to date. For example, if a user changes their display name the API might show the new value in a future response, but the items associated with the user don''t show up as changed when using delta.'
           nullable: true
         id:
           type: string
-          description: The identifier of the identity. This property is read-only.
+          description: 'Unique identifier for the identity or actor. For example, in the access reviews decisions API, this property might record the id of the principal, that is, the group, user, or application that''s subject to review.'
           nullable: true
       additionalProperties:
         type: object
