--- a/openApiDocs/v1.0/BackupRestore.yml
+++ b/openApiDocs/v1.0/BackupRestore.yml
@@ -4648,6 +4648,35 @@ paths:
         default:
           $ref: '#/components/responses/error'
       x-ms-docs-operation-type: operation
+  '/solutions/backupRestore/protectionUnits/{protectionUnitBase-id}/microsoft.graph.cancelOffboard':
+    post:
+      tags:
+        - solutions.backupRestoreRoot
+      summary: Invoke action cancelOffboard
+      description: Cancel the offboarding of a protectionUnitBase.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/protectionunitbase-canceloffboard?view=graph-rest-1.0
+      operationId: solution.backupRestore.protectionUnit_cancelOffboard
+      parameters:
+        - name: protectionUnitBase-id
+          in: path
+          description: The unique identifier of protectionUnitBase
+          required: true
+          style: simple
+          schema:
+            type: string
+          x-ms-docs-key-type: protectionUnitBase
+      responses:
+        2XX:
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/microsoft.graph.protectionUnitBase'
+        default:
+          $ref: '#/components/responses/error'
+      x-ms-docs-operation-type: action
   '/solutions/backupRestore/protectionUnits/{protectionUnitBase-id}/microsoft.graph.driveProtectionUnit':
     get:
       tags:
@@ -4744,6 +4773,35 @@ paths:
                 $ref: '#/components/schemas/microsoft.graph.mailboxProtectionUnit'
         default:
           $ref: '#/components/responses/error'
+  '/solutions/backupRestore/protectionUnits/{protectionUnitBase-id}/microsoft.graph.offboard':
+    post:
+      tags:
+        - solutions.backupRestoreRoot
+      summary: Invoke action offboard
+      description: Offboard a protectionUnitBase.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/protectionunitbase-offboard?view=graph-rest-1.0
+      operationId: solution.backupRestore.protectionUnit_offboard
+      parameters:
+        - name: protectionUnitBase-id
+          in: path
+          description: The unique identifier of protectionUnitBase
+          required: true
+          style: simple
+          schema:
+            type: string
+          x-ms-docs-key-type: protectionUnitBase
+      responses:
+        2XX:
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/microsoft.graph.protectionUnitBase'
+        default:
+          $ref: '#/components/responses/error'
+      x-ms-docs-operation-type: action
   '/solutions/backupRestore/protectionUnits/{protectionUnitBase-id}/microsoft.graph.siteProtectionUnit':
     get:
       tags:
@@ -8290,10 +8348,18 @@ components:
               description: 'Timestamp of the last modification of this protection unit. The timestamp type represents date and time information using ISO 8601 format and is always in UTC. For example, midnight UTC on Jan 1, 2014 is 2014-01-01T00:00:00Z.'
               format: date-time
               nullable: true
+            offboardRequestedDateTime:
+              pattern: '^[0-9]{4,}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]([.][0-9]{1,12})?(Z|[+-][0-9][0-9]:[0-9][0-9])$'
+              type: string
+              description: 'The date and time when protection unit offboard was requested. The timestamp type represents date and time information using ISO 8601 format and is always in UTC. For example, midnight UTC on Jan 1, 2014 is 2014-01-01T00:00:00Z.'
+              format: date-time
+              nullable: true
             policyId:
               type: string
               description: The unique identifier of the protection policy based on which protection unit was created.
               nullable: true
+            protectionSources:
+              $ref: '#/components/schemas/microsoft.graph.protectionSource'
             status:
               $ref: '#/components/schemas/microsoft.graph.protectionUnitStatus'
           additionalProperties:
@@ -8603,6 +8669,7 @@ components:
               $ref: '#/components/schemas/microsoft.graph.publicError'
             isAutoApplyEnabled:
               type: boolean
+              description: true indicates that the protection rule is dynamic; false that it's static.
               nullable: true
             lastModifiedBy:
               $ref: '#/components/schemas/microsoft.graph.identitySet'
@@ -8809,6 +8876,16 @@ components:
           nullable: true
       additionalProperties:
         type: object
+    microsoft.graph.protectionSource:
+      title: protectionSource
+      enum:
+        - none
+        - manual
+        - dynamicRule
+        - unknownFutureValue
+      type: string
+      x-ms-enum-flags:
+        isFlags: true
     microsoft.graph.protectionUnitStatus:
       title: protectionUnitStatus
       enum:
@@ -8818,6 +8895,9 @@ components:
         - unprotected
         - removeRequested
         - unknownFutureValue
+        - offboardRequested
+        - offboarded
+        - cancelOffboardRequested
       type: string
     microsoft.graph.restorableArtifact:
       title: restorableArtifact
@@ -9286,6 +9366,8 @@ components:
         - completed
         - completedWithErrors
         - unknownFutureValue
+        - updateRequested
+        - deleteRequested
       type: string
     microsoft.graph.protectionUnitsBulkJobStatus:
       title: protectionUnitsBulkJobStatus
