--- a/openApiDocs/v1.0/Bookings.yml
+++ b/openApiDocs/v1.0/Bookings.yml
@@ -1686,7 +1686,7 @@ paths:
       tags:
         - solutions.bookingBusiness
       summary: Update bookingservice
-      description: "Update the properties of a bookingService object in the specified bookingBusiness. The following are some examples you can customize for a service:\n- Price\n- Typical length of an appointment\n- Reminders\n- Any time buffer to set up before or finish up after the service\n- Scheduling policy parameters, such as minimum notice to book or cancel, and whether customers can select specific staff members for an appointment."
+      description: "Update the properties of a bookingService object in the specified bookingBusiness. The following are some examples you can customize for a service:\r\n- Price\r\n- Typical length of an appointment\r\n- Reminders\r\n- Any time buffer to set up before or finish up after the service\r\n- Scheduling policy parameters, such as minimum notice to book or cancel, and whether customers can select specific staff members for an appointment."
       externalDocs:
         description: Find more info here
         url: https://learn.microsoft.com/graph/api/bookingservice-update?view=graph-rest-1.0
@@ -3893,7 +3893,7 @@ paths:
       tags:
         - solutions.virtualEventsRoot
       summary: List presenters
-      description: "Get the list of all virtualEventPresenter objects associated with a virtual event. Currently the supported virtual event types are:\n- virtualEventTownhall\n- virtualEventWebinar"
+      description: "Get the list of all virtualEventPresenter objects associated with a virtual event. Currently the supported virtual event types are:\r\n- virtualEventTownhall\r\n- virtualEventWebinar"
       externalDocs:
         description: Find more info here
         url: https://learn.microsoft.com/graph/api/virtualevent-list-presenters?view=graph-rest-1.0
@@ -3955,7 +3955,7 @@ paths:
       tags:
         - solutions.virtualEventsRoot
       summary: Create virtualEventPresenter
-      description: "Create a new virtualEventPresenter object on a virtual event. Currently, the following types of virtual events are supported: \n- virtualEventTownhall\n- virtualEventWebinar"
+      description: "Create a new virtualEventPresenter object on a virtual event. Currently, the following types of virtual events are supported: \r\n- virtualEventTownhall\r\n- virtualEventWebinar"
       externalDocs:
         description: Find more info here
         url: https://learn.microsoft.com/graph/api/virtualevent-post-presenters?view=graph-rest-1.0
@@ -3991,7 +3991,7 @@ paths:
       tags:
         - solutions.virtualEventsRoot
       summary: Get virtualEventPresenter
-      description: "Read the properties and relationships of a virtualEventPresenter object. Currently the supported virtual event types are: \n- virtualEventTownhall\n- virtualEventWebinar"
+      description: "Read the properties and relationships of a virtualEventPresenter object. Currently the supported virtual event types are: \r\n- virtualEventTownhall\r\n- virtualEventWebinar"
       externalDocs:
         description: Find more info here
         url: https://learn.microsoft.com/graph/api/virtualeventpresenter-get?view=graph-rest-1.0
@@ -4086,7 +4086,7 @@ paths:
       tags:
         - solutions.virtualEventsRoot
       summary: Delete virtualEventPresenter
-      description: "Delete a virtualEventPresenter from a virtual event. Currently the supported virtual event types are:\n- virtualEventTownhall\n- virtualEventWebinar"
+      description: "Delete a virtualEventPresenter from a virtual event. Currently the supported virtual event types are:\r\n- virtualEventTownhall\r\n- virtualEventWebinar"
       externalDocs:
         description: Find more info here
         url: https://learn.microsoft.com/graph/api/virtualeventpresenter-delete?view=graph-rest-1.0
@@ -5445,7 +5445,7 @@ paths:
       tags:
         - solutions.virtualEventsRoot
       summary: Create virtualEventPresenter
-      description: "Create a new virtualEventPresenter object on a virtual event. Currently, the following types of virtual events are supported: \n- virtualEventTownhall\n- virtualEventWebinar"
+      description: "Create a new virtualEventPresenter object on a virtual event. Currently, the following types of virtual events are supported: \r\n- virtualEventTownhall\r\n- virtualEventWebinar"
       externalDocs:
         description: Find more info here
         url: https://learn.microsoft.com/graph/api/virtualevent-post-presenters?view=graph-rest-1.0
@@ -5534,7 +5534,7 @@ paths:
       tags:
         - solutions.virtualEventsRoot
       summary: Update virtualEventPresenter
-      description: "Update the properties of a virtualEventPresenter object. Currently the supported virtual event types are:\n- virtualEventWebinar."
+      description: "Update the properties of a virtualEventPresenter object. Currently the supported virtual event types are:\r\n- virtualEventWebinar."
       externalDocs:
         description: Find more info here
         url: https://learn.microsoft.com/graph/api/virtualeventpresenter-update?view=graph-rest-1.0
@@ -6249,7 +6249,7 @@ paths:
       tags:
         - solutions.virtualEventsRoot
       summary: List sessions for a virtual event registration
-      description: 'Get a list of sessions summaries that a registrant registered for in a webinar. A session summary contains only the endDateTime, id, joinWebUrl, startDateTime, and subject of a virtual event session. The rest of session properties will be null. To get all the properties of a virtualEventSession, use the Get virtualEventSession method. '
+      description: 'Get a list of sessions summaries that a registrant registered for in a webinar. A session summary contains only the endDateTime, id, joinWebUrl, startDateTime, and subject of a virtual event session. The remaining session properties are null. To get all the properties of a virtualEventSession, use the Get virtualEventSession method. '
       externalDocs:
         description: Find more info here
         url: https://learn.microsoft.com/graph/api/virtualeventregistration-list-sessions?view=graph-rest-1.0
@@ -6754,7 +6754,7 @@ paths:
       tags:
         - solutions.virtualEventsRoot
       summary: List sessions for a virtual event
-      description: "Get a list of all virtualEventSession summary objects under a virtual event. A session summary contains only the endDateTime, id, joinWebUrl, startDateTime, and subject of a virtual event session. The rest of session properties will be null. Currently, the following virtual event types are supported: \n- virtualEventTownhall\n- virtualEventWebinar"
+      description: "Get a list of all virtualEventSession summary objects under a virtual event. A session summary contains only the endDateTime, id, joinWebUrl, startDateTime, and subject of a virtual event session. The rest of session properties will be null. Currently, the following virtual event types are supported: \r\n- virtualEventTownhall\r\n- virtualEventWebinar"
       externalDocs:
         description: Find more info here
         url: https://learn.microsoft.com/graph/api/virtualevent-list-sessions?view=graph-rest-1.0
@@ -6848,7 +6848,7 @@ paths:
       tags:
         - solutions.virtualEventsRoot
       summary: Get virtualEventSession
-      description: "Read the properties and relationships of a virtualEventSession object.  Currently, the following virtual event types are supported: \n- virtualEventTownhall\n- virtualEventWebinar"
+      description: "Read the properties and relationships of a virtualEventSession object.  Currently, the following virtual event types are supported: \r\n- virtualEventTownhall\r\n- virtualEventWebinar"
       externalDocs:
         description: Find more info here
         url: https://learn.microsoft.com/graph/api/virtualeventsession-get?view=graph-rest-1.0
@@ -9817,10 +9817,18 @@ components:
               description: 'Timestamp of the last modification of this protection unit. The timestamp type represents date and time information using ISO 8601 format and is always in UTC. For example, midnight UTC on Jan 1, 2014 is 2014-01-01T00:00:00Z.'
               format: date-time
               nullable: true
+            offboardRequestedDateTime:
+              pattern: '^[0-9]{4,}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]([.][0-9]{1,12})?(Z|[+-][0-9][0-9]:[0-9][0-9])$'
+              type: string
+              description: 'The date and time when protection unit offboard was requested. The timestamp type represents date and time information using ISO 8601 format and is always in UTC. For example, midnight UTC on Jan 1, 2014 is 2014-01-01T00:00:00Z.'
+              format: date-time
+              nullable: true
             policyId:
               type: string
               description: The unique identifier of the protection policy based on which protection unit was created.
               nullable: true
+            protectionSources:
+              $ref: '#/components/schemas/microsoft.graph.protectionSource'
             status:
               $ref: '#/components/schemas/microsoft.graph.protectionUnitStatus'
           additionalProperties:
@@ -10392,6 +10400,7 @@ components:
               $ref: '#/components/schemas/microsoft.graph.publicError'
             isAutoApplyEnabled:
               type: boolean
+              description: true indicates that the protection rule is dynamic; false that it's static.
               nullable: true
             lastModifiedBy:
               $ref: '#/components/schemas/microsoft.graph.identitySet'
@@ -10591,6 +10600,16 @@ components:
           nullable: true
       additionalProperties:
         type: object
+    microsoft.graph.protectionSource:
+      title: protectionSource
+      enum:
+        - none
+        - manual
+        - dynamicRule
+        - unknownFutureValue
+      type: string
+      x-ms-enum-flags:
+        isFlags: true
     microsoft.graph.protectionUnitStatus:
       title: protectionUnitStatus
       enum:
@@ -10600,6 +10619,9 @@ components:
         - unprotected
         - removeRequested
         - unknownFutureValue
+        - offboardRequested
+        - offboarded
+        - cancelOffboardRequested
       type: string
     microsoft.graph.restorePointTags:
       title: restorePointTags
@@ -10760,6 +10782,8 @@ components:
         - completed
         - completedWithErrors
         - unknownFutureValue
+        - updateRequested
+        - deleteRequested
       type: string
     microsoft.graph.protectionUnitsBulkJobStatus:
       title: protectionUnitsBulkJobStatus
