--- a/openApiDocs/v1.0/PersonalContacts.yml
+++ b/openApiDocs/v1.0/PersonalContacts.yml
@@ -1529,7 +1529,7 @@ paths:
       tags:
         - users.contactFolder
       summary: Invoke function delta
-      description: "Get a set of contacts that have been added, deleted, or updated in a specified folder. A delta function call for contacts in a folder is similar to a GET request, except that by appropriately \napplying state tokens in one or more of these calls, \nyou can query for incremental changes in the contacts in \nthat folder. This allows you to maintain and synchronize a local store of a user's contacts without \nhaving to fetch the entire set of contacts from the server every time.  "
+      description: "Get a set of contacts that have been added, deleted, or updated in a specified folder. A delta function call for contacts in a folder is similar to a GET request, except that by appropriately \r\napplying state tokens in one or more of these calls, \r\nyou can query for incremental changes in the contacts in \r\nthat folder. This allows you to maintain and synchronize a local store of a user's contacts without \r\nhaving to fetch the entire set of contacts from the server every time.  "
       externalDocs:
         description: Find more info here
         url: https://learn.microsoft.com/graph/api/contact-delta?view=graph-rest-1.0
@@ -1693,7 +1693,7 @@ paths:
       tags:
         - users.contactFolder
       summary: Invoke function delta
-      description: "Get a set of contact folders that have been added, deleted, or removed from the user's mailbox. A delta function call for contact folders in a mailbox is similar to a GET request, except that by appropriately \napplying state tokens in one or more of these calls, \nyou can query for incremental changes in the contact folders. This allows you to maintain and synchronize \na local store of a user's contact folders without having to fetch all the contact folders of that mailbox from the server every time."
+      description: "Get a set of contact folders that have been added, deleted, or removed from the user's mailbox. A delta function call for contact folders in a mailbox is similar to a GET request, except that by appropriately \r\napplying state tokens in one or more of these calls, \r\nyou can query for incremental changes in the contact folders. This allows you to maintain and synchronize \r\na local store of a user's contact folders without having to fetch all the contact folders of that mailbox from the server every time."
       externalDocs:
         description: Find more info here
         url: https://learn.microsoft.com/graph/api/contactfolder-delta?view=graph-rest-1.0
@@ -2680,7 +2680,7 @@ paths:
       tags:
         - users.contactFolder
       summary: Invoke function delta
-      description: "Get a set of contacts that have been added, deleted, or updated in a specified folder. A delta function call for contacts in a folder is similar to a GET request, except that by appropriately \napplying state tokens in one or more of these calls, \nyou can query for incremental changes in the contacts in \nthat folder. This allows you to maintain and synchronize a local store of a user's contacts without \nhaving to fetch the entire set of contacts from the server every time.  "
+      description: "Get a set of contacts that have been added, deleted, or updated in a specified folder. A delta function call for contacts in a folder is similar to a GET request, except that by appropriately \r\napplying state tokens in one or more of these calls, \r\nyou can query for incremental changes in the contacts in \r\nthat folder. This allows you to maintain and synchronize a local store of a user's contacts without \r\nhaving to fetch the entire set of contacts from the server every time.  "
       externalDocs:
         description: Find more info here
         url: https://learn.microsoft.com/graph/api/contact-delta?view=graph-rest-1.0
@@ -2820,7 +2820,7 @@ paths:
       tags:
         - users.contactFolder
       summary: Invoke function delta
-      description: "Get a set of contact folders that have been added, deleted, or removed from the user's mailbox. A delta function call for contact folders in a mailbox is similar to a GET request, except that by appropriately \napplying state tokens in one or more of these calls, \nyou can query for incremental changes in the contact folders. This allows you to maintain and synchronize \na local store of a user's contact folders without having to fetch all the contact folders of that mailbox from the server every time."
+      description: "Get a set of contact folders that have been added, deleted, or removed from the user's mailbox. A delta function call for contact folders in a mailbox is similar to a GET request, except that by appropriately \r\napplying state tokens in one or more of these calls, \r\nyou can query for incremental changes in the contact folders. This allows you to maintain and synchronize \r\na local store of a user's contact folders without having to fetch all the contact folders of that mailbox from the server every time."
       externalDocs:
         description: Find more info here
         url: https://learn.microsoft.com/graph/api/contactfolder-delta?view=graph-rest-1.0
@@ -3655,7 +3655,7 @@ paths:
       tags:
         - users.contact
       summary: Invoke function delta
-      description: "Get a set of contacts that have been added, deleted, or updated in a specified folder. A delta function call for contacts in a folder is similar to a GET request, except that by appropriately \napplying state tokens in one or more of these calls, \nyou can query for incremental changes in the contacts in \nthat folder. This allows you to maintain and synchronize a local store of a user's contacts without \nhaving to fetch the entire set of contacts from the server every time.  "
+      description: "Get a set of contacts that have been added, deleted, or updated in a specified folder. A delta function call for contacts in a folder is similar to a GET request, except that by appropriately \r\napplying state tokens in one or more of these calls, \r\nyou can query for incremental changes in the contacts in \r\nthat folder. This allows you to maintain and synchronize a local store of a user's contacts without \r\nhaving to fetch the entire set of contacts from the server every time.  "
       externalDocs:
         description: Find more info here
         url: https://learn.microsoft.com/graph/api/contact-delta?view=graph-rest-1.0
