Remove Dev branch as buffer before Main. Trigger release only on Tagged Commits.

--- a/.azure-pipelines/ci-build.yml
+++ b/.azure-pipelines/ci-build.yml
@@ -33,13 +33,12 @@ variables:
 trigger:
   branches:
     include:
-    - dev
+    - main
 
 pr:
   branches:
     include:
     - main
-    - dev
 resources:
   repositories:
   - repository: 1ESPipelineTemplates
